use getResourceAsStream() so resources can be read from inside the jar